--- a/fastkart/templates/web/checkout.html
+++ b/fastkart/templates/web/checkout.html
@@ -60,7 +60,7 @@
                                                             </div>
 
                                                             <div class="label">
-                                                                <label>Homeeeee</label>
+                                                                <label>Home</label>
                                                             </div>
 
                                                             <ul class="delivery-address-detail">
