--- a/fastkart/templates/web/index.html
+++ b/fastkart/templates/web/index.html
@@ -1,6 +1,6 @@
 {% extends 'partial/base.html' %}
 {% load static %}
-{% block title %}Home{% endblock %}
+{% block title %}Home hghjcjc{% endblock %}
 
 {% block content %}
  <!-- Home Section Start -->
